File: fft.c
Original provenience: DSP-Stone

2016-01-05:
- Rename fft_1024_13 to fft
- Add generic TACLeBench header
- Remove original header from DSP-Stone group
- Remove duplicate semicolon in bit_reduct
- Introduce fft_init (initialization of input) 
  and fft_main (main entry point)
- Update comments about separate input-data file
- Add entry-point annotation to fft_main
- Introduce non-zero return value and make input_data global to reduce impact of
  compiler optimizations
- Prefix the functions pin_down, float2frac, convert, exp2f and the global 
  variables input_data, inputfract, input, twidtable with fft_
2016-03-02:
- Fix undefined behavior due to unsequenced modification and access
- Reformat large arrays using clang-format to 80 columns
- Apply code formatting with astyle as in the example
2016-04-25:
- Remove unnecessary braces in fft_bit_reduct
- Add void parameter to fft_float2fract
- Add all forward declarations
- Move input data into separate file
- Compute check sum and compare it to expected value in return function